<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        style="?attr/materialCardViewFilledStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="90dp"
            android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/avatar_container"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:importantForAccessibility="no"
                    tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/avatar_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:visibility="gone"
                    tools:text="BR"
                    tools:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/name_text_tools"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar_container"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintHorizontal_bias="0.173" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/percentage"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parcentage_text_tools"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/salary"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/value_text_tools"
                app:layout_constraintStart_toEndOf="@+id/avatar_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>