<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="br.com.brunocarvalhs.calculation.cost_resume.CalculationCostResumeViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".cost_resume.CalculationCostResumeFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true">

                    <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/title"
                            android:text="@string/fragment_calculation_cost_resume_title_text"
                            android:layout_margin="24dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/total_value_costs"
                            app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/total_value_costs"
                            android:text="@{viewModel.totalCosts}"
                            tools:text="@string/value_text_tools"
                            android:padding="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/title"
                            app:layout_constraintStart_toStartOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="bottom"
                            android:fitsSystemWindows="true"
                            android:clipToPadding="false"
                            app:layoutManager="LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:itemCount="2"
                            tools:listitem="@layout/item_calculation_members"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/total_value_costs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:text="@string/button_next_floating_action_text" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>

</layout>