<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="br.com.brunocarvalhs.calculation.resume.CalculationResumeViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".resume.CalculationResumeFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true">

                    <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="10dp"
                            style="?attr/materialCardViewFilledStyle"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:id="@+id/materialCardView"
                            app:layout_constraintTop_toTopOf="parent">

                        <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/pieChart"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/materialCardView" />

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="bottom"
                            android:fitsSystemWindows="true"
                            android:clipToPadding="false"
                            app:layoutManager="LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:itemCount="2"
                            app:fastScrollEnabled="false"
                            tools:listitem="@layout/item_calculation_resume_members"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider" />

                    <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="10dp"
                            style="?attr/materialCardViewFilledStyle"
                            app:layout_constraintTop_toBottomOf="@+id/list"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:id="@+id/linearLayoutCompat"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toStartOf="parent">

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.BodyMedium"
                                        android:text="@string/fragment_calculation_accounts_selects_title_text"
                                        app:layout_constraintTop_toBottomOf="@+id/list"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toTopOf="@+id/total_costs" />

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.BodyMedium"
                                        android:text="@string/fragment_calculation_cost_resume_title_text"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/sum_salary_percent" />

                                <com.google.android.material.divider.MaterialDivider
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content" />

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:text="@string/fragment_calculation_resume_result"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.BodyMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/total_costs" />

                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent">

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/sum_salary_percent"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.TitleLarge"
                                        android:text="@={viewModel.totalSalaryPercent}"
                                        app:layout_constraintTop_toBottomOf="@+id/list"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toTopOf="@+id/total_costs" />

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/total_costs"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.TitleLarge"
                                        android:text="@={viewModel.totalCosts}"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/sum_salary_percent" />

                                <com.google.android.material.divider.MaterialDivider
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content" />

                                <androidx.appcompat.widget.AppCompatTextView
                                        tools:text="@string/value_text_tools"
                                        android:text="@={viewModel.totalResume}"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/result"
                                        android:padding="15dp"
                                        style="@style/TextAppearance.Material3.TitleLarge"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/total_costs" />

                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:text="@string/button_finished_floating_action_text" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>
</layout>